--- a/data/graphics.qrc
+++ b/data/graphics.qrc
@@ -49,6 +49,7 @@
         <file>img/material/black/minus.svg</file>
         <file>img/material/black/plus.svg</file>
         <file>img/material/black/shortcut.svg</file>
+        <file>img/material/black/omg.svg</file>
         <file>img/material/white/accept.svg</file>
         <file>img/material/white/arrow-bottom-left.svg</file>
         <file>img/material/white/centeralign.svg</file>
@@ -98,6 +99,8 @@
         <file>img/material/black/apps.svg</file>
         <file>img/material/black/image.svg</file>
         <file>img/material/white/apps.svg</file>
-        <file>img/material/white/image.svg</file>
+        <file>img/material/white/omg.svg</file>
+        <file>img/material/white/omg.svg</file>
+        <file>img/omg.jpg</file>
     </qresource>
 </RCC>
